# observability-simulator

./: .env  .gitignore  README.md  docker-compose.yml
.github/workflows/: build-image.yml
alertmanager/: alertmanager.yml
backend/: Dockerfile  pyproject.toml
backend/app/: logging_config.py  main.py  metrics.py  middleware.py
frontend/: index.html  nginx.conf
grafana/provisioning/dashboards/: dashboards.yml  observability.json
prometheus/: alert_rules.yml  prometheus.yml
promtail/: promtail-config.yml
scripts/: load_gen.py
